Improve API adding Product fields description in schema. Get product by id
